--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,3 +1,9 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+}
+
+
 .root-layout{
   line-height: 1.5;
   font-weight: 400;
@@ -6,7 +12,7 @@
   color-scheme: light dark;
   color: rgb(17 24 39 / 1);
   background-color: rgb(249 250 251 / 1);
-
+  
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -19,7 +25,7 @@
 }
 
 body{
-  height: 100lvh;
+  /* height: 100lvh; */
 }
 
 button:focus,
